--- a/prizes.html
+++ b/prizes.html
@@ -177,154 +177,154 @@
               							<tbody>
                               <tr>
                                 <th>1</th>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>Jon Zierden</td>
+                                <td>288</td>
+                                <td>7.115</td>
+                                <td>Walleye</td>
                                 <td>1st Place Trophy & Jig's Up Rod (Gold Standard Outdoors)</td>
                               </tr>
                               <tr>
                                 <th>2</th>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>Kevin Hanson</td>
+                                <td>2156</td>
+                                <td>6.345</td>
+                                <td>Northern</td>
                                 <td>Eskimo Sting Ray 33cc 8 Inch Auger</td>
                               </tr>
                               <tr>
                                 <th>3</th>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>Grayden Richard</td>
+                                <td>242</td>
+                                <td>6.056</td>
+                                <td>Northern</td>
                                 <td>Eskimo Mako 43cc 8 Inch Auger</td>
                               </tr>
                               <tr>
                                 <th>4</th>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>Mark Thorton</td>
+                                <td>1906</td>
+                                <td>5.987</td>
+                                <td>Northern</td>
                                 <td>Barronett Grounder 350 Bloodtrail Hunting Blind</td>
                               </tr>
                               <tr>
                                 <th>5</th>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>Ryan Mayer</td>
+                                <td>1801</td>
+                                <td>5.561</td>
+                                <td>Northern</td>
                                 <td>$100 Scheels Gift Card</td>
                               </tr>
                               <tr>
                                 <th>6</th>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>Brock Opelt</td>
+                                <td>1442</td>
+                                <td>5.483</td>
+                                <td>Northern</td>
                                 <td>Eskimo Fatfish 949</td>
                               </tr>
                               <tr>
                                 <th>7</th>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>Dan Sleger</td>
+                                <td>1331</td>
+                                <td>5.296</td>
+                                <td>Northern</td>
                                 <td>River's Edge Big Foot Traveler Hang-On Stand</td>
                               </tr>
                               <tr>
                                 <th>8</th>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>Mason Sisko</td>
+                                <td>221</td>
+                                <td>5.200</td>
+                                <td>Northern</td>
                                 <td>$100 Mega/Holiday Gift Card</td>
                               </tr>
                               <tr>
                                 <th>9</th>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>Erik Collins</td>
+                                <td>1201</td>
+                                <td>5.040</td>
+                                <td>Northern</td>
                                 <td>Barronett Prowler 200 Bloodtrail Hunting Blind </td>
                               </tr>
                               <tr>
                                 <th>10</th>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>Matt Butler</td>
+                                <td>885</td>
+                                <td>4.660</td>
+                                <td>Northern</td>
                                 <td>$100 Sand Bar Gift Card </td>
                               </tr>
                               <tr>
                                 <th>11</th>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>Jonah Hewitt</td>
+                                <td>1202</td>
+                                <td>4.633</td>
+                                <td>Northern</td>
                                 <td>Eskimo Pistol Bit 8 Inch Auger</td>
                               </tr>
                               <tr>
                                 <th>12</th>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>Dalton Sommer</td>
+                                <td>133</td>
+                                <td>4.425</td>
+                                <td>Northern</td>
                                 <td>Eskimo Roughneck Jacket - 2XL</td>
                               </tr>
                               <tr>
                                 <th>13</th>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>Connor Gordon</td>
+                                <td>267</td>
+                                <td>4.419</td>
+                                <td>Northern</td>
                                 <td>Engel Livebait Cooler</td>
                               </tr>
                               <tr>
                                 <th>14</th>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>Derrick Groshek</td>
+                                <td>1203</td>
+                                <td>4.400</td>
+                                <td>Northern</td>
                                 <td>Eskimo 8 Inch Hand Auger + Arctic Circle Thermal Tip-Up</td>
                               </tr>
                               <tr>
                                 <th>15</th>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>Jacob Kostner</td>
+                                <td>2372</td>
+                                <td>4.379</td>
+                                <td>Northern</td>
                                 <td>Vexilar Fish Scout Infra-Red Underwater Camera w/Case</td>
                               </tr>
                               <tr>
                                 <th>16</th>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>Dalton Sommer</td>
+                                <td>135</td>
+                                <td>4.331</td>
+                                <td>Northern</td>
                                 <td>$100 Wissota Lodge & Conference Center Gift Card</td>
                               </tr>
                               <tr>
                                 <th>17</th>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>Matt Dommer</td>
+                                <td>1553</td>
+                                <td>4.248</td>
+                                <td>Northern</td>
                                 <td>Eskimo HC40 Propane Auger</td>
                               </tr>
                               <tr>
                                 <th>18</th>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>Tony Laner</td>
+                                <td>88</td>
+                                <td>4.245</td>
+                                <td>Northern</td>
                                 <td>Barronett Radar Backwoods Hunting Blind</td>
                               </tr>
                               <tr>
                                 <th>19</th>
-                                <td></td>
-                                <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>Dan Gillis</td>
+                                <td>1391</td>
+                                <td>4.218</td>
+                                <td>Northern</td>
                                 <td>River's Edge Big Foot XL Classic Hang-On Stand</td>
                               </tr>
                               <tr>
