Truck and one that got away

--- a/prizes.html
+++ b/prizes.html
@@ -160,7 +160,7 @@
                     <div class="row mb-4">
                       <div class="col-sm-12">
                         <h2 class="brand-blue">2021 Ford F150 XLT Super Crew Truck Winner</h2>
-                        <h4> <br> <h4>
+                        <h4>Quint Krueger (Ticket: 1666) <h4>
                       </div>
                       <div class="col-sm-12">
                         <h2 class="brand-blue">2023 Fish Prize Winners</h2>
@@ -920,8 +920,8 @@
                             </thead>
                             <tbody>
                               <tr>
-                                <td></td>
-                                <td></td>
+                                <td>Joe Kerr</td>
+                                <td>2231</td>
                                 <td>Eskimo HC40 Propane 10 Inch Auger</td>
                              </tr>
                             </tbody>
