Raffle Winners //Missing number 13

--- a/prizes.html
+++ b/prizes.html
@@ -942,62 +942,62 @@
               							<tbody>
                               <tr>
                                 <th>1</th>
-                                <td></td>
+                                <td>Shayne Denning</td>
                                 <td>2022 Polaris Sportsman 570 ATV</td>
                               </tr>
                               <tr>
                                 <th>2</th>
-                                <td></td>
+                                <td>William Brunschmid</td>
                                 <td>$500 Scheels Gift Card</td>
                               </tr>
                               <tr>
                                 <th>3</th>
-                                <td></td>
+                                <td>Nick Vanden Berg</td>
                                 <td>$500 Scheels Gift Card</td>
                               </tr>
                               <tr>
                                 <th>4</th>
-                                <td></td>
+                                <td>Mark Seyforth</td>
                                 <td>$500 Scheels Gift Card</td>
                               </tr>
                               <tr>
                                 <th>5</th>
-                                <td></td>
+                                <td>Greta Schnur</td>
                                 <td>$500 Scheels Gift Card</td>
                               </tr>
                               <tr>
                                 <th>6</th>
-                                <td></td>
+                                <td>Keira Bolt</td>
                                 <td>$50 Wissota Lodge Bar & Restaurant Gift Card</td>
                               </tr>
                               <tr>
                                 <th>7</th>
-                                <td></td>
+                                <td>Denis O'Niell</td>
                                 <td>Steamatics Raffle Basket</td>
                               </tr>
                               <tr>
                                 <th>8</th>
-                                <td></td>
+                                <td>Katelyn Esch</td>
                                 <td>Big Fish Encounters Prize Basket</td>
                               </tr>
                               <tr>
                                 <th>9</th>
-                                <td></td>
+                                <td>Connor Smith</td>
                                 <td>Bill's Sport Shop T-shirt + Polortec WI Badger's Jacket</td>
                               </tr>
                               <tr>
                                 <th>10</th>
-                                <td></td>
+                                <td>Helen Humphrey</td>
                                 <td>Dunkin Donuts Prize Basket</td>
                               </tr>
                               <tr>
                                 <th>11</th>
-                                <td></td>
+                                <td>Colten Latzke</td>
                                 <td>Brewing Projekt Raffle Basket</td>
                               </tr>
                               <tr>
                                 <th>12</th>
-                                <td></td>
+                                <td>Jacob Fuerstenberg</td>
                                 <td>MN Vikings I. Smith Jr Authentic Football</td>
                               </tr>
                               <tr>
@@ -1007,12 +1007,12 @@
                               </tr>
                               <tr>
                                 <th>14</th>
-                                <td></td>
+                                <td>Pat B</td>
                                 <td>Steamatics Raffle Basket</td>
                               </tr>
                               <tr>
                                 <th>15</th>
-                                <td></td>
+                                <td>Wendl Stevens</td>
                                 <td>Green Bay Packers Collector's Series Football</td>
                               </tr>
                             </tbody>
