--- a/prizes.html
+++ b/prizes.html
@@ -1007,12 +1007,12 @@
                               </tr>
                               <tr>
                                 <th>14</th>
-                                <td>Pat B</td>
+                                <td>Pat Burkardt</td>
                                 <td>Steamatics Raffle Basket</td>
                               </tr>
                               <tr>
                                 <th>15</th>
-                                <td>Wendl Stevens</td>
+                                <td>Wendy Stevens</td>
                                 <td>Green Bay Packers Collector's Series Football</td>
                               </tr>
                             </tbody>
