--- a/prizes.html
+++ b/prizes.html
@@ -1002,7 +1002,7 @@
                               </tr>
                               <tr>
                                 <th>13</th>
-                                <td></td>
+                                <td>Donna Butkus</td>
                                 <td>Dunkin Donuts Prize Basket</td>
                               </tr>
                               <tr>
