Change prize 350 from guided trip to sticker jacket

--- a/prizes.html
+++ b/prizes.html
@@ -597,7 +597,7 @@
                                 <td>800</td>
                                 <td>0.582</td>
                                 <td>Walleye</td>
-                                <td>Half Day Guided Fishing Trip w/ Big Fish Encounters</td>
+                                <td>Stricker Jacket from Big Fish Encounters</td>
                               </tr>
                               <tr>
                                 <th>360</th>
