Updated truck winner

--- a/prizes.html
+++ b/prizes.html
@@ -159,7 +159,7 @@
                   <div class="card-body">
                     <div class="row mb-4">
                       <div class="col-sm-12">
-                        <h2 class="brand-blue">2021 Ford F150 XLT Super Crew Truck Winner</h2>
+                        <h2 class="brand-blue">2-Year Lease on a Ford F150 from Eau Claire Ford</h2>
                         <h4>Quint Krueger (Ticket: 1666) <h4>
                       </div>
                       <div class="col-sm-12">
@@ -1041,7 +1041,7 @@
                   <div class="card-body">
                     <div class="row mb-4">
                       <div class="col-sm-12">
-                        <h2 class="brand-blue">2021 Ford F150 XLT Super Crew Truck Winner</h2>
+                        <h2 class="brand-blue">2-Year Lease on a Ford F150 from Eau Claire Ford</h2>
                         <h4>John Gregory (Ticket Number: 0263)<h4>
                       </div>
                       <div class="col-sm-12">
