--- a/directions.html
+++ b/directions.html
@@ -72,9 +72,9 @@
                 <a class="dropdown-item brand-blue" href="lodging.html" >Lodging</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item brand-blue" target="_blank" href="assets/2023 Jigs Up Tournament Rules.pdf">Rules</a>
-                <div class="dropdown-divider"></div>
+                <!--<div class="dropdown-divider"></div>
                 <a class="dropdown-item brand-blue" target="_blank" href="assets/WIFA_2023.pdf">WIFA Tournament</a>
-              </div>
+              </div>-->
             </li>
             <li class="nav-item">
               <a class="nav-link brand-blue" href="prizes.html">Prizes</a>
@@ -147,7 +147,7 @@
               </div>
             </div>
             <div class="card">
-              <div class="card-header" id="headingWifaTournamentAndKidsKlub">
+              <!--<div class="card-header" id="headingWifaTournamentAndKidsKlub">
                 <h5 class="mb-0">
                   <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#wifaTournamentAndKidsKlub" aria-expanded="false" aria-controls="wifaTournamentAndKidsKlub">
                     WIFA Tournament
@@ -158,7 +158,7 @@
                 <div class="card-body">
                   <div id="map2" style="height: 450px; width:100%;"></div>
                 </div>
-              </div>
+              </div>-->
             </div>
           </div>
         </div>
