--- a/schedule.html
+++ b/schedule.html
@@ -72,8 +72,8 @@
                 <a class="dropdown-item brand-blue" href="lodging.html" >Lodging</a>
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item brand-blue" target="_blank" href="assets/2023 Jigs Up Tournament Rules.pdf">Rules</a>
-                <div class="dropdown-divider"></div>
-                <a class="dropdown-item brand-blue" target="_blank" href="assets/WIFA_2023.pdf">WIFA Tournament</a>
+                <!--<div class="dropdown-divider"></div>
+                <a class="dropdown-item brand-blue" target="_blank" href="assets/WIFA_2023.pdf">WIFA Tournament</a>-->
               </div>
             </li>
             <li class="nav-item">
