switch to Mega Holiday in Chippewa

--- a/tickets.html
+++ b/tickets.html
@@ -164,7 +164,7 @@
 				<ul class="bulletless-grey">
 					<li>Online at jigsup.org <span style="color:red"></span></li>
 					<li>Scheels (bait available) <span style="color:red">*</span></li>
-					<li>Mega Holiday Stations (Chippewa Falls locations only)</li>
+					<li>Mega Holiday Bridge Street, Chippewa Falls</li>
           <li>Lake Wissota Travel Stop</li>
 					<li>Eau Claire Ford<span style="color:red">*</span></li>
 					<li>Jacobson's Hardware Chippewa Locations (bait available)<span style="color:red">*</span></li>
