--- a/contact.html
+++ b/contact.html
@@ -192,6 +192,10 @@
                 <td scope="row" class="name">Shari Schuebel</td>
                 <td class="organization">UWEC Recreation and Sport Operations</td>
               </tr>
+              <tr>
+                <td scope="row" class="name">Jason Verdugo</td>
+                <td class="organization">UWEC Recreation and Sport Operations</td>
+              </tr>
                 <td scope="row">Al Wiberg</td>
                 <td>UWEC Recreation and Sport Operations</td>
               </tr>
