Addition of Prevea Health Sponsor

--- a/sponsors.html
+++ b/sponsors.html
@@ -210,6 +210,13 @@
               <img src="./images/sponsors/edge.png" class="img-fluid" alt="The Edge">
             </a>
           </div>
+
+          <div class="col-md-2 text-center my-auto mx-auto">
+            <a href="https://www.prevea.com/" target="_blank" class="sponsors">
+              <img src="./images/sponsors/Prevea.png" class="img-fluid" alt="Prevea Health">
+            </a>
+          </div>
+
           <div class="col-md-2 text-center my-auto mx-auto">
             <a href="http://www.lakewissotasandbar.com/" target="_blank" class="sponsors">
               <img src="./images/sponsors/thesandbar.png" class="img-fluid" alt="The SandBar">
