Addition of Prevea Health to rest of pages

--- a/prizes.html
+++ b/prizes.html
@@ -5328,6 +5328,12 @@
     </div>
     <div class="row">
       <div class="col-md-2 text-center my-auto mx-auto">
+        <a href="https://www.prevea.com/" target="_blank" class="sponsors">
+          <img src="./images/sponsors/Prevea.png" class="img-fluid" alt="Prevea Health">
+        </a>
+      </div>
+    <div class="row">
+      <div class="col-md-2 text-center my-auto mx-auto">
         <a href="http://www.reconyx.com/" target="_blank" class="sponsors">
           <img src="./images/sponsors/Reconyx.png" class="img-fluid" alt="Reconyx">
         </a>
