Removal of Kaityln and Liz replaced with Kari Rufff

--- a/contact.html
+++ b/contact.html
@@ -160,19 +160,9 @@
                 <td scope="row">Tammy Brunschmid</td>
                 <td>UWEC Recreation and Sport Operations</td>
               </tr>
-              <tr>
-                <td scope="row">Kaitlyn Carlson</td>
-                <td>Scheels</td>
-              </tr>
-              <tr>
                 <td scope="row">Chuck Daly</td>
                 <td>Wissota Lions Club</td>
               </tr>
-              <tr>
-                <td scope="row">Liz Fleming</td>
-                <td>Scheels</td>
-              </tr>
-              <tr>
                 <td scope="row">Nick Hoven</td>
                 <td>UWEC Athletics</td>
               </tr>
@@ -188,6 +178,11 @@
                 <td scope="row">Sheryl Poirier</td>
                 <td>UWEC Recreation and Sport Operations</td>
               </tr>
+              <tr>
+                <td scope="row" class="name">Kari Ruff</td>
+                <td class="organization">Scheels</td>
+              </tr>
+              <tr>
               <tr>
                 <td scope="row" class="name">Shari Schuebel</td>
                 <td class="organization">UWEC Recreation and Sport Operations</td>
