--- a/contact.html
+++ b/contact.html
@@ -94,6 +94,9 @@
           </ul>
           <ul class="navbar-nav ml-auto d-inline-block">
             <li class="nav-item d-xs-inline d-md-none d-xl-inline float-right">
+              <a class="nav-link " href="https://www.uwec.edu/recreation/"><img src="./images/UWEC.jpg" class="social-media" alt="UWEC Recreation"/></a>
+            </li>
+            <li class="nav-item d-xs-inline d-md-none d-xl-inline float-right">
               <a class="nav-link " href="http://www.e-clubhouse.org/sites/lakewissota/"><img src="./images/lclub.png" class="social-media" alt="Lions Club"/></a>
             </li>
             <li class="nav-item d-xs-inline d-md-none d-xl-inline float-right">
@@ -160,6 +163,7 @@
                 <td scope="row">Tammy Brunschmid</td>
                 <td>UWEC Recreation and Sport Operations</td>
               </tr>
+             
                 <td scope="row">Chuck Daly</td>
                 <td>Wissota Lions Club</td>
               </tr>
