seperation of the sponsors by horizontal line

--- a/contact.html
+++ b/contact.html
@@ -228,6 +228,8 @@
           </a>
         </div>
       </div>
+      <hr style="height:.75px;border-width:0;color:gray;background-color:gray">
+
 
     <!-- Gold Sponsors -->
     <div class="row">
@@ -287,6 +289,8 @@
           </a>
         </div>
       </div>
+      <hr style="height:.75px;border-width:0;color:gray;background-color:gray">
+
 
       <!-- Silver Sponsors -->
       <div class="row">
