--- a/directions.html
+++ b/directions.html
@@ -194,6 +194,8 @@
         </a>
       </div>
     </div>
+    <hr style="height:.75px;border-width:0;color:gray;background-color:gray">
+
 
   <!-- Gold Sponsors -->
   <div class="row">
@@ -253,6 +255,8 @@
         </a>
       </div>
     </div>
+    <hr style="height:.75px;border-width:0;color:gray;background-color:gray">
+
 
     <!-- Silver Sponsors -->
     <div class="row">
