--- a/sponsors.html
+++ b/sponsors.html
@@ -135,6 +135,8 @@
             </a>
           </div>
         </div>
+        <hr style="height:.75px;border-width:0;color:gray;background-color:gray">
+
 
       <!-- Gold Sponsors -->
       <div class="row">
@@ -194,11 +196,13 @@
             </a>
           </div>
         </div>
+        <hr style="height:.75px;border-width:0;color:gray;background-color:gray">
+
 
         <!-- Silver Sponsors -->
         <div class="row">
           <div class="col-12 mt-4">
-            <h3 class="brand-blue text-center">Silver</h3>
+           <h3 class="brand-blue text-center">Silver</h3>
           </div>
         </div>
 
