--- a/lodging.html
+++ b/lodging.html
@@ -169,6 +169,8 @@
         </a>
       </div>
     </div>
+    <hr style="height:.75px;border-width:0;color:gray;background-color:gray">
+
 
   <!-- Gold Sponsors -->
   <div class="row">
@@ -228,6 +230,8 @@
         </a>
       </div>
     </div>
+    <hr style="height:.75px;border-width:0;color:gray;background-color:gray">
+
 
     <!-- Silver Sponsors -->
     <div class="row">
