--- a/schedule.html
+++ b/schedule.html
@@ -180,6 +180,8 @@
         </a>
       </div>
     </div>
+    <hr style="height:.75px;border-width:0;color:gray;background-color:gray">
+
 
   <!-- Gold Sponsors -->
   <div class="row">
@@ -239,6 +241,8 @@
         </a>
       </div>
     </div>
+    <hr style="height:.75px;border-width:0;color:gray;background-color:gray">
+
 
     <!-- Silver Sponsors -->
     <div class="row">
