--- a/tickets.html
+++ b/tickets.html
@@ -205,6 +205,8 @@
         </a>
       </div>
     </div>
+    <hr style="height:.75px;border-width:0;color:gray;background-color:gray">
+
 
   <!-- Gold Sponsors -->
   <div class="row">
@@ -264,6 +266,8 @@
         </a>
       </div>
     </div>
+    <hr style="height:.75px;border-width:0;color:gray;background-color:gray">
+
 
     <!-- Silver Sponsors -->
     <div class="row">
