additon of hr to sponsor on bottom of page

--- a/sponsorinfo.html
+++ b/sponsorinfo.html
@@ -272,6 +272,8 @@
         </a>
       </div>
     </div>
+    <hr style="height:.75px;border-width:0;color:gray;background-color:gray">
+
 
   <!-- Gold Sponsors -->
   <div class="row">
@@ -331,6 +333,8 @@
         </a>
       </div>
     </div>
+    <hr style="height:.75px;border-width:0;color:gray;background-color:gray">
+
 
     <!-- Silver Sponsors -->
     <div class="row">
