--- a/prizes.html
+++ b/prizes.html
@@ -151,9 +151,9 @@
           <div id="accordion1" class="my-4">
             <div id="accordion">
               <div class="card">
-                 <!---- <div class="card-header" id="headingFive">
+                  <div class="card-header" id="headingSix">
                       <h5 class="mb-0">
-                        <button class="btn btn-link" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+                        <button class="btn btn-link" data-toggle="collapse" data-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
                           2024 Truck, Fish, and Raffle Winners
                         </button>
                       </h5>
@@ -1031,7 +1031,7 @@
                       </div> 
                     </div>
                   </div>
-                </div>-->
+                </div>
                 <div class="card-header" id="headingFive">
                     <h5 class="mb-0">
                       <button class="btn btn-link" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
