Addition of 2024 Raffle Prizes

--- a/prizes.html
+++ b/prizes.html
@@ -946,77 +946,77 @@
                                 <tr>
                                   <th>1</th> 
                                   <td></td> 
-                                  <td></td> 
+                                  <td>Nextgen Powersports Polaris 450 ATV</td> 
                                 </tr>
                                 <tr>
                                   <th>2</th>
                                   <td></td>
-                                  <td></td>
+                                  <td>Scheels $500 Gift Card</td>
                                 </tr>
                                 <tr>
                                   <th>3</th>
                                   <td></td>
-                                  <td></td>
+                                  <td>Scheels $500 Gift Card</td>
                                 </tr>
                                 <tr>
                                   <th>4</th>
                                   <td></td>
-                                  <td></td>
+                                  <td>Scheels $500 Gift Card</td>
                                 </tr>
                                 <tr>
                                   <th>5</th>
                                   <td></td>
-                                  <td></td>
+                                  <td>Scheels $500 Gift Card</td>
                                 </tr>
                                 <tr>
                                   <th>6</th>
                                   <td></td>
-                                  <td></td>
+                                  <td>Big Fish Encounters Ice Fishing Starter Package</td>
                                 </tr>
                                 <tr>
                                   <th>7</th>
                                   <td></td>
-                                  <td></td>
+                                  <td>Steamatic of Western Wisconsin Ice Fishing Beginner Bundle</td>
                                 </tr>
                                 <tr>
                                   <th>8</th>
                                   <td></td>
-                                  <td></td>
+                                  <td>Steamatic of Western Wisconsin Brandy Old Fashion Basket</td>
                                 </tr>
                                 <tr>
                                   <th>9</th>
                                   <td></td>
-                                  <td></td>
+                                  <td>Discover Lake Wissota Gift Cards</td>
                                 </tr>
                                 <tr>
                                   <th>10</th>
                                   <td></td>
-                                  <td></td>
+                                  <td>UWEC Blugold Basket</td>
                                 </tr>
                                 <tr>
                                   <th>11</th>
                                   <td></td>
-                                  <td></td>
+                                  <td>Dunkin Donuts Coffee Lovers Basket</td>
                                 </tr>
                                 <tr>
                                   <th>12</th>
                                   <td></td>
-                                  <td></td>
+                                  <td>Discover Lake Wissota Gift Cards</td>
                                 </tr>
                                 <tr>
                                   <th>13</th>
                                   <td></td>
-                                  <td></td>
+                                  <td>Steamatic of Western Wisconsin Wine Basket</td>
                                 </tr>
                                 <tr>
                                   <th>14</th>
                                   <td></td>
-                                  <td></td>
+                                  <td>Steamatic of Western Wisconsin Ice Fishing Beginnner Bundle</td>
                                 </tr>
                                 <tr>
                                   <th>15</th>
                                   <td></td>
-                                  <td></td>
+                                  <td>Bill's Sport Shop Winter Warm Up Bundle</td>
                                 </tr>
                               </tbody>
                             </table>
