emphasizing Become A Sponsor Button

--- a/sponsors.html
+++ b/sponsors.html
@@ -116,14 +116,16 @@
 
     
       <!-- Become a Sponsor Button -->
-      <div class="row mt-2">
+      <div class="row">
         <div class="col-12 text-center mt-4">
-          <button onclick="location.href='sponsorinfo.html'" class="mt-4 btn btn-default sponsor-button">Become a Sponsor </a>
-        </div>
+          <h1 class = "brand-blue text-center" onclick="location.href='sponsorinfo.html'">Click Here to Become a Sponsor!</a></h1>
+        </div> 
       </div>
 
-
+      <!--  LINE BREAK UNDER BECOME A SPONSOR  -->
       <div class="content container px-4">
+        <hr class= dashed; style="height: 2.25px;border-width:0;color:rgb(12, 12, 135);background-color:rgb(12, 12, 135)">
+
       <!-- Platinum Sponsors -->
         <div class="row">
           <div class="col-12 mt-3">
