--- a/index.html
+++ b/index.html
@@ -119,8 +119,7 @@
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img class="d-block img-fluid" src="./images/slider/Jig_s_Up_2023_Logo.png" alt="First slide">
-            </div>
+              <img class="d-block img-fluid" src="./images/slider/Jigs Up Website Logo 2024.png" alt="First slide"></div>
             <!-- <div class="carousel-item">
               <img class="d-block img-fluid" src="./images/slider/eventmap.png" alt="Event map">
             </div>
