Addition of EarthPonds, EarthBlinds, and Nicolet to Gold Sponsors

--- a/lodging.html
+++ b/lodging.html
@@ -174,60 +174,77 @@
 
   <!-- Gold Sponsors -->
   <div class="row">
-      <div class="col-12 mt-4">
-        <h2 class="brand-blue text-center">Gold</h2>
-      </div>
+    <div class="col-12 mt-4">
+      <h2 class="brand-blue text-center">Gold</h2>
     </div>
+  </div>
 
-    <div class="row">
-      
-      <div class="col-md-3 text-center my-auto mx-auto">
-        <a href="http://www.geteskimo.com/" target="_blank" class="sponsors">
-          <img src="./images/sponsors/eskimo.png" class="img-fluid" alt="Eskimo">
-        </a>
-      </div>
-      <div class="col-md-3 text-center my-auto mx-auto">
-        <a href="http://www.weau.com/" target="_blank" class="sponsors">
-          <img src="./images/sponsors/weau13.png" class="img-fluid" alt="WEAU13">
-        </a>
-      </div>
+  <div class="row">
+    <div class="col-md-3 text-center my-auto mx-auto">
+      <a href="http://www.geteskimo.com/" target="_blank" class="sponsors">
+        <img src="./images/sponsors/EarthBlinds.png" class="img-fluid" alt="Eskimo">
+      </a>
     </div>
-    <div class="row">
-      <div class="col-md-3 text-center my-auto mx-auto">
-        <a href="https://icecastlefh.com/" target="_blank" class="sponsors">
-          <img src="./images/sponsors/icecastlefh.png" class="img-fluid" alt="Ice Castle Fish Houses">
-        </a>
-      </div>
-      <div class="col-md-3 text-center my-auto mx-auto">
-        <a href="http://anytimetrailer.com/" target="_blank" class="sponsors">
-          <img src="./images/sponsors/AnytimeTrailer.png" class="img-fluid" alt="Anytime Trailer">
-        </a>
-      </div>
-      <div class="col-md-3 text-center my-auto mx-auto">
-        <a href="https://www.wissotalodge.com/" target="_blank" class="sponsors">
-          <img src="./images/sponsors/WissotaLodge.png" class="img-fluid" alt="Wissota Lodge">
-        </a>
-      </div>
+    <div class="col-md-3 text-center my-auto mx-auto">
+      <a href="http://www.geteskimo.com/" target="_blank" class="sponsors">
+        <img src="./images/sponsors/NicoletBank.png" class="img-fluid" alt="Eskimo">
+      </a>
     </div>
-    <div class="row">
-      <div class="col-md-3 text-center my-auto mx-auto">
-        <a href="http://www.theviewonlakewissota.com/" target="_blank" class="sponsors">
-          <img src="./images/sponsors/view.png" class="img-fluid" alt="The View">
-        </a>
-      </div>
-      <div class="col-md-3 text-center my-auto mx-auto">
-        <a href="https://www.erbertandgerberts.com/" target="_blank" class="sponsors">
-          <img src="./images/sponsors/erbertsGerberts.png" class="img-fluid" alt="Erberts and Gerberts">
-        </a>
-      </div>
-      <div class="col-md-3 text-center my-auto mx-auto">
-        <a href="https://www.nextgen-powersportscf.com/" target="_blank" class="sponsors">
-          <img src="./images/sponsors/xtreme1.png" class="img-fluid" alt="Xtreme">
-        </a>
-      </div>
+    <div class="col-md-3 text-center my-auto mx-auto">
+      <a href="http://www.geteskimo.com/" target="_blank" class="sponsors">
+        <img src="./images/sponsors/eskimo.png" class="img-fluid" alt="Eskimo">
+      </a>
+    </div>   
+   </div>
+  
+  <div class="row">
+    <div class="col-md-3 text-center my-auto mx-auto">
+      <a href="http://anytimetrailer.com/" target="_blank" class="sponsors">
+        <img src="./images/sponsors/AnytimeTrailer.png" class="img-fluid" alt="Anytime Trailer">
+      </a>
     </div>
-    <hr style="height:.75px;border-width:0;color:gray;background-color:gray">
+    <div class="col-md-3 text-center my-auto mx-auto">
+      <a href="https://icecastlefh.com/" target="_blank" class="sponsors">
+        <img src="./images/sponsors/icecastlefh.png" class="img-fluid" alt="Ice Castle Fish Houses">
+      </a>
+    </div>
+    <div class="col-md-3 text-center my-auto mx-auto">
+      <a href="https://www.wissotalodge.com/" target="_blank" class="sponsors">
+        <img src="./images/sponsors/WissotaLodge.png" class="img-fluid" alt="Wissota Lodge">
+      </a>
+    </div>
+  </div>
 
+  <div class="row">
+    <div class="col-md-3 text-center my-auto mx-auto">
+      <a href="http://www.theviewonlakewissota.com/" target="_blank" class="sponsors">
+        <img src="./images/sponsors/view.png" class="img-fluid" alt="The View">
+      </a>
+    </div>
+    <div class="col-md-3 text-center my-auto mx-auto">
+      <a href="https://www.erbertandgerberts.com/" target="_blank" class="sponsors">
+        <img src="./images/sponsors/erbertsGerberts.png" class="img-fluid" alt="Erberts and Gerberts">
+      </a>
+    </div>
+    <div class="col-md-3 text-center my-auto mx-auto">
+      <a href="https://www.nextgen-powersportscf.com/" target="_blank" class="sponsors">
+        <img src="./images/sponsors/xtreme1.png" class="img-fluid" alt="Xtreme">
+      </a>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-3 text-center my-auto mx-auto">
+    <a href="http://www.weau.com/" target="_blank" class="sponsors">
+      <img src="./images/sponsors/weau13.png" class="img-fluid" alt="WEAU13">
+    </a>  
+  </div>
+    <div class="col-md-3 text-center my-auto mx-auto">
+    <a href="http://www.geteskimo.com/" target="_blank" class="sponsors">
+      <img src="./images/sponsors/EarthPonds.png" class="img-fluid" alt="Eskimo">
+    </a>
+  </div>
+  </div>
+  <hr style="height:.75px;border-width:0;color:gray;background-color:gray">
 
     <!-- Silver Sponsors -->
     <div class="row">
