--- a/liveResults.html
+++ b/liveResults.html
@@ -171,27 +171,32 @@
 </div>
 
 <div class="row">
-  
+  <div class="col-md-3 text-center my-auto mx-auto">
+    <a href="http://www.geteskimo.com/" target="_blank" class="sponsors">
+      <img src="./images/sponsors/EarthBlinds.png" class="img-fluid" alt="Eskimo">
+    </a>
+  </div>
+  <div class="col-md-3 text-center my-auto mx-auto">
+    <a href="http://www.geteskimo.com/" target="_blank" class="sponsors">
+      <img src="./images/sponsors/NicoletBank.png" class="img-fluid" alt="Eskimo">
+    </a>
+  </div>
   <div class="col-md-3 text-center my-auto mx-auto">
     <a href="http://www.geteskimo.com/" target="_blank" class="sponsors">
       <img src="./images/sponsors/eskimo.png" class="img-fluid" alt="Eskimo">
     </a>
-  </div>
-  <div class="col-md-3 text-center my-auto mx-auto">
-    <a href="http://www.weau.com/" target="_blank" class="sponsors">
-      <img src="./images/sponsors/weau13.png" class="img-fluid" alt="WEAU13">
-    </a>
-  </div>
-</div>
+  </div>   
+ </div>
+
 <div class="row">
-  <div class="col-md-3 text-center my-auto mx-auto">
-    <a href="https://icecastlefh.com/" target="_blank" class="sponsors">
-      <img src="./images/sponsors/icecastlefh.png" class="img-fluid" alt="Ice Castle Fish Houses">
-    </a>
-  </div>
   <div class="col-md-3 text-center my-auto mx-auto">
     <a href="http://anytimetrailer.com/" target="_blank" class="sponsors">
       <img src="./images/sponsors/AnytimeTrailer.png" class="img-fluid" alt="Anytime Trailer">
+    </a>
+  </div>
+  <div class="col-md-3 text-center my-auto mx-auto">
+    <a href="https://icecastlefh.com/" target="_blank" class="sponsors">
+      <img src="./images/sponsors/icecastlefh.png" class="img-fluid" alt="Ice Castle Fish Houses">
     </a>
   </div>
   <div class="col-md-3 text-center my-auto mx-auto">
@@ -200,6 +205,7 @@
     </a>
   </div>
 </div>
+
 <div class="row">
   <div class="col-md-3 text-center my-auto mx-auto">
     <a href="http://www.theviewonlakewissota.com/" target="_blank" class="sponsors">
@@ -216,6 +222,18 @@
       <img src="./images/sponsors/xtreme1.png" class="img-fluid" alt="Xtreme">
     </a>
   </div>
+</div>
+<div class="row">
+  <div class="col-md-3 text-center my-auto mx-auto">
+  <a href="http://www.weau.com/" target="_blank" class="sponsors">
+    <img src="./images/sponsors/weau13.png" class="img-fluid" alt="WEAU13">
+  </a>  
+</div>
+  <div class="col-md-3 text-center my-auto mx-auto">
+  <a href="http://www.geteskimo.com/" target="_blank" class="sponsors">
+    <img src="./images/sponsors/EarthPonds.png" class="img-fluid" alt="Eskimo">
+  </a>
+</div>
 </div>
 <hr style="height:.75px;border-width:0;color:gray;background-color:gray">
 
