correction of links for earthblinds/ponds and nicolet

--- a/index.html
+++ b/index.html
@@ -305,12 +305,12 @@
 
     <div class="row">
       <div class="col-md-3 text-center my-auto mx-auto">
-        <a href="http://www.geteskimo.com/" target="_blank" class="sponsors">
+        <a href="https://earthblinds.com/" target="_blank" class="sponsors">
           <img src="./images/sponsors/EarthBlinds.png" class="img-fluid" alt="Eskimo">
         </a>
       </div>
       <div class="col-md-3 text-center my-auto mx-auto">
-        <a href="http://www.geteskimo.com/" target="_blank" class="sponsors">
+        <a href="https://www.nicoletbank.com/" target="_blank" class="sponsors">
           <img src="./images/sponsors/NicoletBank.png" class="img-fluid" alt="Eskimo">
         </a>
       </div>
@@ -363,7 +363,7 @@
       </a>  
     </div>
       <div class="col-md-3 text-center my-auto mx-auto">
-      <a href="http://www.geteskimo.com/" target="_blank" class="sponsors">
+      <a href="https://earthblinds.com/ponds/" target="_blank" class="sponsors">
         <img src="./images/sponsors/EarthPonds.png" class="img-fluid" alt="Eskimo">
       </a>
     </div>
