--- a/contact.html
+++ b/contact.html
@@ -231,7 +231,7 @@
       <hr style="height:.75px;border-width:0;color:gray;background-color:gray">
 
 
-   <!-- Gold Sponsors -->
+  <!-- Gold Sponsors -->
   <div class="row">
     <div class="col-12 mt-4">
       <h2 class="brand-blue text-center">Gold</h2>
@@ -240,12 +240,12 @@
 
   <div class="row">
     <div class="col-md-3 text-center my-auto mx-auto">
-      <a href="http://www.geteskimo.com/" target="_blank" class="sponsors">
+      <a href="https://earthblinds.com/" target="_blank" class="sponsors">
         <img src="./images/sponsors/EarthBlinds.png" class="img-fluid" alt="Eskimo">
       </a>
     </div>
     <div class="col-md-3 text-center my-auto mx-auto">
-      <a href="http://www.geteskimo.com/" target="_blank" class="sponsors">
+      <a href="https://www.nicoletbank.com/" target="_blank" class="sponsors">
         <img src="./images/sponsors/NicoletBank.png" class="img-fluid" alt="Eskimo">
       </a>
     </div>
@@ -298,13 +298,12 @@
     </a>  
   </div>
     <div class="col-md-3 text-center my-auto mx-auto">
-    <a href="http://www.geteskimo.com/" target="_blank" class="sponsors">
+    <a href="https://earthblinds.com/ponds/" target="_blank" class="sponsors">
       <img src="./images/sponsors/EarthPonds.png" class="img-fluid" alt="Eskimo">
     </a>
   </div>
   </div>
   <hr style="height:.75px;border-width:0;color:gray;background-color:gray">
-
 
       <!-- Silver Sponsors -->
       <div class="row">
